Impl UI - Support disabling default http trigger creation for a specific function

--- a/src/nuclio/functions/version/version-triggers/version-triggers.less
+++ b/src/nuclio/functions/version/version-triggers/version-triggers.less
@@ -28,6 +28,10 @@
         }
     }
 
+    .http-trigger-checkbox {
+        display: flex;
+    }
+
     .item-row .item-name, .item-row .item-class, .item-row .item-info {
         padding-left: 0;
     }
