--- a/src/nuclio/functions/version/version-monitoring/version-monitoring.less
+++ b/src/nuclio/functions/version/version-monitoring/version-monitoring.less
@@ -18,9 +18,14 @@
                 margin-right: 16px;
                 margin-bottom: 16px;
 
-                &.invocation-block {
+                .enriched-node-selectors {
+                    max-width: 1000px;
+                }
+
+                .invocation-block {
                     overflow: visible;
                     display: flex;
+                    margin-bottom: 10px;
 
                     .internal-invocation-urls, .external-invocation-urls {
                         flex: 1;
@@ -59,7 +64,7 @@
                     max-height: 500px;
                 }
 
-                .monitoring-block-title {
+                .title {
                     font-size: 16px;
                     font-weight: bold;
                     color: @dusk-three;
