--- a/src/igz_controls/components/multiple-checkboxes/multiple-checkboxes.less
+++ b/src/igz_controls/components/multiple-checkboxes/multiple-checkboxes.less
@@ -139,6 +139,10 @@
         }
     }
 
+    .select-all-option {
+        color: @master-checkbox-color;
+    }
+
     .group-title {
         display: flex;
         justify-content: space-between;
