--- a/src/nuclio/functions/version/version-execution-log/version-execution-log.less
+++ b/src/nuclio/functions/version/version-execution-log/version-execution-log.less
@@ -7,8 +7,20 @@
   .ncl-version-execution-log-wrapper {
     height: 95%;
 
+    .info-page-filters {
+      z-index: 990;
+
+      .multiple-checkboxes-option {
+        margin: 10px 0;
+      }
+    }
+
     .igz-info-page-actions-bar {
       z-index: 990;
+
+      .actions-dropdown-block {
+        width: 200px;
+      }
     }
 
     > .row {
