Impl [Nuclio] Implement a download button

--- a/src/nuclio/functions/version/version-execution-log/version-execution-log.less
+++ b/src/nuclio/functions/version/version-execution-log/version-execution-log.less
@@ -1,7 +1,7 @@
 .ncl-version-execution-log {
   .control-panel-log-color-set();
 
-  min-width: 1200px;
+  min-width: 1250px;
   padding: 24px 25px 22px 41px;
 
   .ncl-version-execution-log-wrapper {
@@ -33,6 +33,10 @@
       margin-bottom: 16px;
       transition: @igz-basic-transition;
       height: 100%;
+
+      .limitation-message {
+        line-height: 20px;
+      }
 
       .logs-container {
         padding-bottom: 50px;
