Fix [Nuclio] functions with same prefix appear as different replicas of same function

--- a/src/igz_controls/components/log-table-row/log-table-row.tpl.html
+++ b/src/igz_controls/components/log-table-row/log-table-row.tpl.html
@@ -3,10 +3,10 @@
     <div class="log-entry">
         <span class="log-entry-time">{{$ctrl.entryItem['@timestamp'] | date : 'yy-MM-dd HH:mm:ss.sss' }}</span>
         <span class="log-entry-name"
-              data-uib-tooltip="{{$ctrl.entryItem.name}}"
+              data-uib-tooltip="{{$ctrl.getLogName()}}"
               data-tooltip-placement="top"
               data-tooltip-popup-delay="200"
-              data-tooltip-append-to-body="true">&nbsp;{{$ctrl.getLogName()}}</span>
+              data-tooltip-append-to-body="true">&nbsp;{{$ctrl.getLogTrimmedName()}}</span>
         <span class="log-entry-level-{{$ctrl.entryItem.level.toLowerCase()}}"
               data-ng-if="$ctrl.entryItem.level">&nbsp;({{$ctrl.getLogLevel()}})</span>
         <span class="log-entry-message">&nbsp;{{$ctrl.entryItem.message}}</span>
