[UI] Nuclio execution log - see active vs all replicas

--- a/src/nuclio/functions/version/version-execution-log/version-execution-log.less
+++ b/src/nuclio/functions/version/version-execution-log/version-execution-log.less
@@ -103,7 +103,16 @@
           padding-left: 15px;
           padding-right: 15px;
         }
+
+        .checkboxes-dropdown-title {
+          text-transform: initial;
+          font-size: 14px;
+        }
       }
+    }
+
+    .online-replicas__checkbox {
+      margin: 5px 0;
     }
 
     .igz-multiple-checkboxes {
