--- a/src/igz_controls/less/tooltips.less
+++ b/src/igz_controls/less/tooltips.less
@@ -97,7 +97,7 @@
     div.highcharts-tooltip {
 
         > span {
-            width: 160px;
+            width: 160px !important;
         }
     }
 }
